crates/toml_edit/tests/snapshots/invalid/table/duplicate-key-05.stderr
TOML parse error at line 4, column 14
  |
4 | [fruit.apple.taste] # INVALID
  |              ^^^^^
duplicate key
